# rust-llm-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.jsx
frontend/app/board/[groupId]/: page.jsx
frontend/app/groups/: page.jsx
public/: app.css  detail.html  detail.js  index.html  main.js
src/: api.rs  db.rs  groq.rs  main.rs
