[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-openai = "0.29"
anyhow = "1"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
axum = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
base64ct = "=1.7.3"
tower-http = { version = "0.5", features = ["fs", "trace"] }
