[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
dotenv = "0.15"
sha2 = "0.10"
